# design3

./: .gitignore  Adressbook.xlsx  README.md  WiFi_Acces.txt  identMoteurs
Kinect/: distance.cpp
SudokubeSolver/: .cproject  .gitignore  .project
app/: clean.bash  exeSudo.bash  imane.bash  killProc.bash  make.bash  runTests.bash  startBaseStation.bash  startKinocto.bash  startMicrocontroller.bash  testBaseStation.bash  testLongKinocto.bash
app/src/base_station/: CMakeLists.txt  package.xml
app/src/base_station/include/: Kinect.h
app/src/base_station/src/: BaseStation.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  kinect.cpp  main.cpp
app/src/base_station/test/: kinectTest.cpp
app/src/basestation/: BaseStation.cpp  CMakeLists.txt  main.cpp
app/src/basestation/include/: BaseStation.h  BaseStation.hpp  Kinect.h  KinectCalibration.h  KinectCalibrator.h  KinectCapture.h  KinectTransformator.h  KinectUtility.h  ObjectDetector.h  ObstaclesDetector.h  RobotDetection.h  RobotDetector.h  mainwindow.hpp
app/src/basestation/src/: BaseStation.cpp  Kinect.cpp  KinectCalibration.cpp  KinectCalibrator.cpp  KinectCapture.cpp  KinectTransformation.cpp  KinectTransformator.cpp  KinectUtility.cpp  ObjectDetection.cpp  ObjectDetector.cpp  ObstaclesDetection.cpp  ObstaclesDetector.cpp  RobotDetection.cpp  RobotDetector.cpp  mainwindow.cpp
app/src/basestation/srv/: FindObstaclesPosition.srv  FindRobotPosition.srv  ShowSolvedSudocube.srv  UpdateRobotPosition.srv
app/src/basestation/test/: AllTests.cpp  KinectCalibratorTest.cpp  KinectTransformatorTest.cpp  ObjectDetectorTest.cpp  ObstacleDetectorTest.cpp  RobotDetectorTest.cpp  kinectTest.cpp
app/src/basestation/ui/: mainwindow.ui
app/src/kinocto/: CMakeLists.txt  Kinocto.cpp  maintest.cpp  package.xml
app/src/kinocto/include/: AntennaParam.h  BaseStationDecorator.h  CameraCapture.h  CameraImageSource.h  Case.h  IImageSource.h  Kinocto.h  MicrocontrollerDecorator.h  Move.h  Node.h  NumberReader.h  PathPlanning.h  PathPlanning2.h  Pos.h  Position.h  ShowWorkspace.h  SquarePair.h  SudocubeExtractor.h  Sudokube.h  SudokubeSolver.h  Workspace.h  fsa.h  stlastar.h
app/src/kinocto/include/communication/: BaseStationDecorator.h
app/src/kinocto/include/pathPlanning/: Move.h  Node.h  PathPlanning.h
app/src/kinocto/include/vision/: AngleFinder.h  BlueCornerFinder.h  CameraCapture.h  FrameCenterFinder.h  GreenBorderAngleFinder.h  GreenFrameExtractor.h  NumberExtractor.h  RedSquarePairExtractor.h  SquaresExtractor.h  SquaresPairSorter.h  SudocubeExtractor.h  VisionUtility.h  WallAngleFinder.h
app/src/kinocto/src/: AntennaParam.cpp  BaseStationDecorator.cpp  CameraCapture.cpp  CameraImageSource.cpp  Case.cpp  Kinocto.cpp  MicrocontrollerDecorator.cpp  Node.cpp  NumberReader.cpp  PathPlanning.cpp  PathPlanning2.cpp  Pos.cpp  ShowWorkspace.cpp  SudocubeExtractor.cpp  SudokuReader.cpp  Sudokube.cpp  SudokubeSolver.cpp  Workspace.cpp  listener.cpp
app/src/kinocto/src/communication/: BaseStationDecorator.cpp  MicrocontrollerDecorator.cpp
app/src/kinocto/src/pathPlanning/: Node.cpp  PathPlanning.cpp
app/src/kinocto/src/sudocube/: Case.cpp  Sudocube.cpp
app/src/kinocto/src/vision/: AngleFinder.cpp  BlueCornerFinder.cpp  CameraCapture.cpp  FrameCenterFinder.cpp  GreenBorderAngleFinder.cpp  GreenFrameExtractor.cpp  NumberExtractor.cpp  NumberReader.cpp  RedSquarePairExtractor.cpp  SquaresExtractor.cpp  SquaresPairSorter.cpp  SudocubeExtractor.cpp  VisionUtility.cpp  WallAngleFinder.cpp
app/src/kinocto/srv/: MoveRobotToSudocube.srv  SetRobotPositionAndAngle.srv  TestExtractSudocubeAndSolve.srv  TestFindObstacles.srv  TestFindRobotAngle  TestGetAntennaParamAndShow.srv  TestGoToGreenFrameAndDraw.srv  TestGoToSudocubeX.srv
app/src/kinocto/test/: AllLongTests.cpp  AllTests.cpp  CaseTest.cpp  NumberReaderIT.cpp  PathPlanningTest.cpp  SudocubeExtractorIT.cpp  SudokubeSolverTest.cpp  SudokubeTest.cpp
app/src/kinocto/test/pathPlanning/: PathPlanningTest.cpp
app/src/kinocto/test/sudocube/: CaseTest.cpp
app/src/kinocto/test/vision/: AngleFinderIT.cpp  BlueCornerFinderIT.cpp  FrameCenterFinderIT.cpp  GreenBorderAngleFinderIT.cpp  SudocubeExtractorIT.cpp  WallAngleFinderIT.cpp
config/: cameraDefault  cameraOptimized  installBaseStationDevLoopUbuntu  installBaseStationLoopUbuntu  installROSFed  installRobotDevLoop  installRobotLoop  ouvrirPortFed  ouvrirPortUSB  ouvrirPortUbuntu  revaliases  sendIP.bash  sendip  ssmtpConfig
diagrams/: Diagramme de classe1  diagSeq1Ite1.seq.violet  diagSeq2Ite1.seq.violet  diagSeq3Ite1.seq.violet  diagSeq4Ite1.seq.violet  diagSeq5Ite1.seq.violet  diagrammeclasse2.vpp  diagrammes_sequence.vsd  kinocto.gan  kinocto.mpx  kinocto.vpp  plan_integration-iter1.vsd  plan_integration.vsd
meeting/: .~lock.GestionHedbo_Semaine2.xlsx#  .~lock.GestionHedbo_Semaine4.xls#  .~lock.GestionHedbo_Semaine5.xlsx#  Design_3_tasks_1.xlsx  GestionHedbo_Semaine10.xlsx  GestionHedbo_Semaine2.xlsx  (+9 more)
prototypes/Kinect/: CMakeLists.txt  KinectCalibration.cpp  KinectCalibration.h  Utility.cpp  Utility.h  calib.xlsx  calibration.txt  find_obstacles.cpp  getPhotoTest.py  kinect.cpp  kinect.h  kinect4Pos.txt  kinectTest.cpp  main.cpp  obstacles.txt  test1.txt
prototypes/Kinect/src/: KinectCalibration.cpp  KinectCalibration.h  KinectCalibrator.cpp  KinectTransformation.cpp  KinectTransformation.h  KinectTransformator.cpp  KinectTransformator.h  KinectUtility.cpp  ObjectDetection.cpp  ObjectDetection.h  ObjectDetector.cpp  ObjectDetector.h  ObstaclesDetection.cpp  ObstaclesDetection.h  ObstaclesDetector.cpp  ObstaclesDetector.h  RobotDetection.cpp  RobotDetection.h  RobotDetector.cpp  kinect.cpp  kinect.h  main.cpp
prototypes/Kinect/test/: KinectCalibratorTest.cpp  ObjectDetectorTest.cpp  ObstacleDetectorTest.cpp  RobotDetectorTest.cpp  kinectTest.cpp
prototypes/SudokuReader/: CMakeLists.txt  CameraCapture.cpp  NumberReader.cpp  NumberReader.h  SudokuReader.cpp  SudokuReader.h  execute.bash  valExecute.bash
prototypes/wallAngleFinder/: CMakeLists.txt  WallAngleFinder.cpp  WallAngleFinder.h  execute.bash
various/: BOM.xls  (+13 more)
(+481 files in other folders)
